# vector-art-program

./: .gitignore  Cargo.toml  build.rs
amygui/: Cargo.toml
amygui/src/: lib.rs  number_input.rs  panel.rs  rec.rs
amylib/: Cargo.toml
amylib/src/: io.rs  lib.rs  math.rs  ops.rs  rc.rs
amylib/src/collections/: fixed_queue.rs  mod.rs  stack.rs  tree.rs
amylib/src/iter/: directed.rs  mod.rs  reversible.rs
amymath/: Cargo.toml
amymath/src/: color.rs  irect2.rs  ivec2.rs  lib.rs  mat.rs  nmat.rs  nrect.rs  num.rs  nvec.rs  rec.rs  rect2.rs  rlgl.rs  set.rs  urect2.rs  uvec2.rs  vec.rs  vec2.rs
amyvec/: Cargo.toml
amyvec/src/: cubic_bezier.rs  curve.rs  generics.rs  lib.rs  matrix.rs  path_point.rs  polynomial.rs  vector.rs
amyvec/src/bezier/: cubic.rs  linear.rs  mod.rs  quadratic.rs
amyvec/src/math/: math.tex
build_rs_macros/: Cargo.toml
build_rs_macros/src/: lib.rs
experiment/src/: main.rs
raemylib/: Cargo.toml
raemylib/src/: io.rs  lib.rs
raylib_rs/: Cargo.toml  build.rs
raylib_rs/src/: core.rs  lib.rs  rlgl.rs  utils.rs
rltest/: Cargo.toml
rltest/src/: lib.rs
sdl3_amity/: Cargo.toml  build.rs
sdl3_amity/glad-gl/src/: gl.rs
sdl3_amity/src/: error.rs  filesystem.rs  glad.rs  init.rs  lib.rs  properties.rs  video.rs  wrapper.h
sdl3_amity/src/amy_util/: mod.rs  null_term_sdl_parray.rs  sdl_slice.rs
sdl3_amity/src/glad/: items.rs  mod.rs
sdl3_amity/src/video/: gl.rs
src/: appearance.rs  bitmap.rs  editor.rs  engine.rs  main.rs  stack.rs  tool.rs
src/document/: artboard.rs  layer.rs  mod.rs  serialize.rs
src/document/layer/: group.rs  mod.rs  rc.rs  tree.rs  ui_iter.rs
src/document/serialize/: export_svg.rs  mod.rs  render_png.rs  save_load.rs
src/editor/: mod.rs  undo_redo.rs
src/engine/: color_wheel.rs  layers_panel.rs  mod.rs  tool_panel.rs
src/raster/: mod.rs  raster_brush.rs
src/shaders/: bezier.frag  blur.frag  circle.frag  hue_wheel.frag  mod.rs  pill.frag
src/tool/: basic_selection.rs  brush.rs  direct_selection.rs  mod.rs  pen.rs  point_selection.rs  raster_brush.rs  vector_brush.rs
src/tool/point_selection/: mod.rs  multiple.rs  singular.rs
src/ui/: layers_panel.rs  mod.rs  number_input.rs  panel.rs  tool_panel.rs
src/ui/specialized/: mod.rs  (+1 more)
src/vector_path/: bezier_slice.rs  fill.rs  gradient.rs  mat2.rs  mod.rs  path_point.rs  stroke.rs
(+522 files in other folders)
