[workspace]
members = ["amygui", "amylib", "amymath", "amyvec", "rltest", "raylib_rs", "build_rs_macros"]

[package]
name = "vector-art-program"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
raylib = "5.0.2"
amylib = { path = "amylib" }
amymath = { path = "amymath" }
amygui = { path = "amygui" }
amyvec = { path = "amyvec", features = [] }
rltest = { path = "rltest" }

[build-dependencies]
build_rs_macros = { path = "build_rs_macros" }
copy_to_output = "2.2.0"
glob = "0.3"
