[workspace]
members = ["amygui", "amylib", "amymath", "amyvec", "rltest", "build_rs_macros"]

[package]
name = "vector-art-program"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
raylib = { version = "5.0.2", features = ["nalgebra_interop"] }
amylib = { path = "amylib" }
amymath = { path = "amymath" }
amygui = { path = "amygui" }
amyvec = { path = "amyvec", features = ["debug_curvature"] }
rltest = { path = "rltest" }
nalgebra = "0.33.2"

[build-dependencies]
build_rs_macros = { path = "build_rs_macros" }
copy_to_output = "2.2.0"
glob = "0.3"
