[workspace]
members = ["amygui", "amylib", "amymath", "amyvec", "rltest", "build_rs_macros", "raylib_rs", "sdl3_amity", "sdl3_amity/glad-gl", "experiment"]

[package]
name = "vector-art-program"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
raylib = { version = "5.0.2", features = ["nalgebra_interop"] }
raylib_rs = { path = "raylib_rs" }
sdl3_amity = { path = "sdl3_amity", optional = true }
amylib = { path = "amylib" }
amymath = { path = "amymath" }
amygui = { path = "amygui" }
amyvec = { path = "amyvec", features = [] }
rltest = { path = "rltest" }
nalgebra = "0.33.2"
parking_lot = "0.12.3"

[build-dependencies]
build_rs_macros = { path = "build_rs_macros" }
copy_to_output = "2.2.0"
glob = "0.3"

[features]
default = ["use-sdl"]
use-sdl = ["dep:sdl3_amity"]
