[package]
name = "amyvec"
version = "0.1.0"
edition = "2021"

[dependencies]
raylib = "5.0.2"
amylib = { path = "../amylib" }
amymath = { path = "../amymath" }
rltest = { path = "../rltest" }
raylib_rs = { path = "../raylib_rs" }
num = "0.4.3"

[features]
debug_stroke = []
debug_fill = []
debug_curvature = []
